# ohmycoins

./: .env  .env.template  .gitignore  .roomodes  ACTION_REQUIRED_SPRINT_2.7_COMPLETE.md  AGENTIC_INDEX.md  AGENT_INSTRUCTIONS.md  ALIGNMENT_REVIEW.md  API_CONTRACTS.md  ARCHITECTURE.md  BYOM_PLANNING_COMPLETE.md  CLAUDE.md  CONTRACT_RFC.md  CURRENT_SPRINT.md  Comprehensive_Data_QUICKSTART.md  DEPLOYMENT_STATUS_2026-01-11.md  DEVELOPER_A_SUMMARY.md  DEVELOPER_B_SPRINT_13_SUMMARY.md  DEVELOPER_B_SUMMARY.md  DEVELOPER_B_WEEK1-2_SUMMARY.md  DEVELOPER_B_WEEK3-4_SUMMARY.md  DEVELOPER_B_WEEK5-6_SUMMARY.md  DEVELOPER_C_SUMMARY.md  DEVELOPMENT.md  DOCUMENTATION_CLEANUP_PLAN.md  END_OF_SPRINT_PROTOCOL.md  ENRICHMENT_CONTRACTS.md  INFRASTRUCTURE_DECISION.md  INTEGRATION_FAILURE.md  INVESTIGATION_SUMMARY.md  LOGBOOK.md  PARALLEL_DEVELOPMENT_GUIDE.md  PERSISTENT_DEV_DATA.md  PHASE1_ALIGNMENT_REVIEW.md  PHASE1_SUMMARY.md  QUICK_START_NEXT_STEPS.md  README.md  REQUIREMENTS.md  REVIEW_COMPLETE.md  ROADMAP.md  (+55 more)
backend/: .gitignore  Dockerfile  MYPY_DEBT.md  README.md  TRACK_B_FIX_SUMMARY.md  debug_login.py  pyproject.toml  pytest.ini
backend/.venv_test/: pyvenv.cfg
backend/app/: crud_collector.py  crud_risk.py  crud_trade_audit.py  initial_data.py  main.py  models.py
backend/app/alembic/versions/: 01dfca4f8758_add_auditlog_model.py  02ce9a858be9_add_strategy_promotion_tables.py  03022c68d6fc_add_backtest_runs_table.py  1d0434380682_add_tradeaudit_model.py  1dc7a9078780_add_total_votes_to_news_sentiment.py  28ac3452fc30_add_algorithm_and_deployed_algorithm_.py  2a5dad6f1c22_add_price_data_5min_table.py  (+34 more)
backend/app/api/: deps.py  main.py  response_base.py
backend/app/core/: config.py  db.py
backend/app/enrichment/: __init__.py  base.py  entity_enricher.py  keyword_enricher.py  llm_enricher.py  pipeline.py  scheduler.py  social_enricher.py  statistical_health.py  views.py
backend/app/services/: README.md  alerting.py  coinspot_auth.py  collector.py  dagger_wrapper.py  encryption.py  scheduler.py  training_data_pipeline.py  websocket_manager.py
backend/app/utils/: __init__.py  notifications.py  seed_data.py  test_fixtures.py
backend/scripts/: benchmark_safety.py  byom_performance_benchmark.py  hard_stop_watcher.py  prestart.sh  run_ccxt_collector.py  run_live_strategy.py  run_ma_strategy.py  run_security_audit.sh  seed_live_strategy.py  test.sh  test_ingestion.py  test_stats.py  verify_plugins.py
backend/tests/: check_audit_logs.py  conftest.py  populate_kill_switch_history.py  populate_trade_audits.py  test_base_collector.py  test_ingestion.py  test_kill_switch_manual.py  test_registry.py  test_roadmap_validation.py  test_sprint_234_integration.py  trigger_audit_actions.py
backend/tests/api/: test_access_control.py  test_agent_websocket.py  test_ui_support.py  test_user_profile.py  test_websockets.py
backend/tests/collectors/: test_chain_walker_integration.py  test_cryptopanic_improvements.py  test_cryptoslate_enrichment.py  test_glass_chain_walker.py  test_keyword_taxonomy.py
backend/tests/enrichment/: __init__.py  test_auto_trigger.py  test_enricher_new_storage.py  test_entity_enricher.py  test_gemini_provider.py  test_keyword_enricher.py  test_llm_enricher.py  test_news_enrichment_model.py  test_pipeline.py
backend/tests/integration/: test_strategy_promotion.py  test_synthetic_data_examples.py  test_trading_ws.py
backend/tests/performance/: README.md  load_test_rate_limiting.js
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/security/: __init__.py  test_llm_credential_isolation.py  test_llm_key_security.py  test_prompt_injection.py  test_rate_limiting.py
backend/tests/services/: test_alerting.py  test_backtesting.py  test_coinspot_auth.py  test_coinspot_strategy.py  test_collector.py  test_encryption.py  test_scheduler_db.py  test_strategy_adapter_duplicates.py  test_strategy_generator.py  test_watcher.py
backend/tests/utils/: test_seed_data.py  utils.py
(+754 files in other folders)
