[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "dagger-io>=0.11.0",
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "tenacity<9.0.0,>=8.2.3",
    "pydantic>2.0",
    "emails<1.0,>=0.6",
    "jinja2<4.0.0,>=3.1.4",
    "alembic<2.0.0,>=1.12.1",
    "httpx<1.0.0,>=0.25.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.21",
    # Pin bcrypt to 4.0.1 for passlib compatibility (4.1+ has breaking changes)
    "bcrypt==4.0.1",
    "pydantic-settings<3.0.0,>=2.2.1",
    "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
    "pyjwt<3.0.0,>=2.8.0",
    "apscheduler<4.0.0,>=3.10.4",
    "cryptography<47.0.0,>=42.0.4",
    # Phase 2.5: Comprehensive Data Collection
    "aiohttp>=3.13.5,<4.0.0",
    "beautifulsoup4<5.0.0,>=4.12.0",
    # Phase 3: Agentic Data Science dependencies
    "mlflow>=3.11.1", # Phase 4: Model Deployment (CVE-2026-0545 fix)
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0", # BYOM: Google Gemini support (Sprint 2.8)
    "langchain-anthropic>=0.3.0", # BYOM: Anthropic Claude support (Sprint 2.9)
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "redis<8.0.0,>=5.0.0",
    "pandas<3.0.0,>=2.0.0",
    "scikit-learn<2.0.0,>=1.3.0",
    "xgboost<3.0.0,>=2.0.0",
    "matplotlib<4.0.0,>=3.7.0",
    "seaborn<1.0.0,>=0.12.0",
    "ta<1.0.0,>=0.11.0",
    # Data seeding utilities
    "faker<42.0.0,>=22.0.0",
    "playwright>=1.57.0",
    "h11>=0.16.0",
    "feedparser>=6.0.10",
    "ccxt>=4.5.39",
    "joblib>=1.3.0",
    "optuna>=3.0.0",
    "pyarrow>=14.0.0",
    "mlflow>=3.11.1",
    "shap>=0.42.0,<1.0.0",
]

[tool.uv]
dev-dependencies = [
    "dagger-io>=0.11.0",
    "pytest<8.0.0,>=7.4.3",
    "pytest-asyncio<1.0.0,>=0.23.0",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
    "pytest-cov>=6.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic", "tests"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic", ".venv"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "E712",  # SQLAlchemy column comparisons require == True/False
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # unused function arguments (pytest fixtures)
    "B007",    # unused loop control variable
    "B011",    # assert False in tests
    "B017",    # pytest.raises(Exception)
    "E402",    # late imports (conftest setup)
    "E701",    # multiple statements on one line
    "F841",    # unused variables in tests
    "UP038",   # isinstance tuple style OK in tests
]
"scripts/**/*.py" = [
    "T201",    # print statements OK in scripts
    "E402",    # import order in scripts
    "I001",    # import sorting in scripts (side-effect imports)
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
